# dumbchess

./: README.md  play.py  play_many.py  pyproject.toml  requirements.txt
dumbchess/: game.py
dumbchess/agents/: __init__.py  agent.py  mate_in_one_agent.py  minimax_agent.py  player_agent.py  random_agent.py
tests/: test_mates.py
